# ZK-battleship

./: .gitignore  README.md
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: board_init.rs  game.rs  game_coordinator.rs  game_master.rs  game_round.rs  lib.rs  main.rs  network.rs  network_protocol.rs  proofs.rs  ui.rs  visualize.rs
host/tests/: full_game_suite.rs  prover_and_network_smoke.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
