[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
# Use the installed risc0 crates (3.x) to match the user's toolchain
risc0-zkvm = { version = "3.0.3" }
rand = { version = "0.8", optional = true }

[features]
rand = ["dep:rand"]