[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Use the locally-installed risc0 3.x series (matches risc0-build 3.0.3 used elsewhere)
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std"] }
core = { path = "../../core" }

serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
